# csdh-postop-seizure-risk

./: .gitignore  .pre-commit-config.yaml  CALLGRAPH.md  CITATION.cff  CODE_REVIEW.md  DATA_SCHEMA.md  LICENSE  Makefile  README.md  _config.yml  index.md  pyproject.toml  requirements.txt
docs/: Code_Companion.docx  Code_Companion.tex  JNNP_main_manuscript.docx  JNNP_supplementary.docx  REDLINE_main.md  REWRITE_FLAGS.md  aed_efficacy_harm_lit_review.md  conformal_prediction_lit_review.md  imrad_plan.md  literature_review_imbalance_smallcohort.md  main_manuscript.docx  reviewer_access.md  supplementary.docx
results/: 02_calibration_metrics.csv  03_dca_summary_at_thresholds.csv  03_dca_table.csv  04_loho_per_hospital.csv  04_loho_summary.csv  05_leakage_audit.csv  06_overfitting_metrics.csv  06_stability_summary.csv  06_top_features_per_fold.csv  07_imputation_comparison.csv  07_mcar_test.csv  07_missingness.csv  07_missingness_vs_outcome_bidmc.csv  07_missingness_vs_outcome_eicu.csv  07_rubin_pooled.csv  08_cohort_comparison.csv  09_competing_risks.csv  09_cox_ph_assumption_test.csv  09_missing_time_sensitivity.csv  10_ceac_pairwise.csv  10_pairwise_psa.csv  10_pairwise_summary.csv  11_treatment_failure_psa.csv  11_treatment_failure_summary.csv  12_nis_outcome_comparison.csv  12_nis_seizure_codes.csv  13_nis_group_norms.csv  13_nis_grouped_lasso.csv  13_nis_lambda_grid.csv  13_nis_selected_lambdas.csv  14_decision_tree_rollback.csv  15_radiology_nlp_validation.csv  15_radiology_nlp_validation_detail.csv  16_voi_evpi.csv  16_voi_evppi.csv  16_voi_psa_tracked.csv  18_bidmc_optimized.csv  19_transfer_learning.csv  21_imbalance_sweep.csv  22_diverse_stacking.csv  (+20 more)
scripts/: 02_calibration.py  03_dca.py  04_loho.py  05_temporal_leakage.py  06_overfitting.py  07_missing_data.py  08_eicu_cohort.py  09_competing_risks.py  10_11_cea_pairwise.py  12_nis_seizure_reclassify.py  13_nis_grouped_lasso.py  14_decision_tree.py  15_radiology_nlp.py  16_voi_evpi.py  17_build_slides.py  18_bidmc_optimize.py  19_transfer_learning.py  20_build_manuscript.py  21_imbalance_sweep.py  22_diverse_stacking.py  23_tabpfn_eval.py  24_firth_bayes_lr.py  25_conformal_prediction.py  26_main_figures.py  27_build_jnnp_manuscript.py  28_make_callgraph.py  29_main_figures_jnnp.py  30_export_calculator_assets.py  31_export_callgraph_json.py  32_build_code_companion.py  33_build_code_companion_pdf.py  34_graphical_abstract.py  35_build_submission_package.py  36_build_talk_slides.py  (+16 more)
(+14 files in other folders)
